Fix style coverFlow anda add images

--- a/src/styles/CoverFlow.scss
+++ b/src/styles/CoverFlow.scss
@@ -1,8 +1,7 @@
 .coverflow {
   position: relative;
-  padding: 2rem 0;
-  width: 100%;
-  height: 400px;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   margin: 0 auto;
 }
@@ -13,23 +12,26 @@
   transition: transform 0.5s ease;
 
   &.single-image {
-    justify-content: center; // Centrar la imagen si es única
-    transform: none; // No aplicar transformaciones si solo hay una imagen
+    align-items: center;
+    justify-content: center;
+    transform: none;
+    margin: auto;
+    max-width: calc(100vw);
   }
 }
 
 .coverflow__item {
-  max-width: 300px; // Debe coincidir con coverflowItemWidth en el JS
-  height: 100%;
+  width: 100%; // Debe coincidir con coverflowItemWidth en el JS
+  height: 100svh;
   margin: 0 15px; // Ajusta según coverflowItemGap
   transition: transform 0.5s ease, opacity 0.5s ease;
 
   img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    min-height: 80svh;
+    object-fit: contain;
+    aspect-ratio: auto;
   }
 
   &.active {
@@ -39,6 +41,6 @@
 
   &:not(.active) {
     transform: scale(0.8);
-    opacity: 0.5;
+    // opacity: 0.5;
   }
 }
